@@ -3,29 +3,28 @@ package com.proyecto.integrador.integrador.service.impl;
 import com.proyecto.integrador.integrador.dto.DocumentDto;
 import com.proyecto.integrador.integrador.entity.DocumentEntity;
 import com.proyecto.integrador.integrador.exception.ResourceNotFoundException;
+import com.proyecto.integrador.integrador.repository.DocumentRepository;
 import com.proyecto.integrador.integrador.service.DocumentService;
 import com.proyecto.integrador.integrador.service.mapper.DocumentMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.ArrayList;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class DocumentServiceImpl implements DocumentService {
-
-    final HashMap<Long, DocumentEntity> hashMap = new HashMap<>();
-    Long id = 1L;
 
     @Autowired
     private DocumentMapper documentMapper;
 
+    @Autowired
+    private DocumentRepository documentRepository;
+
     @Override
     public List<DocumentDto> all() {
-        return new ArrayList<>(
-                this.hashMap.values().stream().map((d) -> this.documentMapper.toDto(d))
-                        .toList()
-        );
+        return this.documentRepository.findAll()
+                .stream().map(this.documentMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -37,10 +36,8 @@ public class DocumentServiceImpl implements DocumentService {
     @Override
     public DocumentDto save(DocumentDto documentDto) {
         final DocumentEntity entity = this.documentMapper.toEntity(documentDto);
-        entity.setId(this.id);
         entity.setCreatedAt(new Date());
-        this.hashMap.put(this.id++, entity);
-        return this.documentMapper.toDto(entity);
+        return this.documentMapper.toDto(this.documentRepository.save(entity));
     }
 
     @Override
@@ -49,19 +46,17 @@ public class DocumentServiceImpl implements DocumentService {
         doc.setName(documentDto.getName());
         doc.setDescription(documentDto.getDescription());
         doc.setPath(documentDto.getPath());
-        return this.documentMapper.toDto(doc);
+        return this.documentMapper.toDto(this.documentRepository.save(doc));
     }
 
     @Override
     public void deleteById(Long id) {
-        this.findEntityById(id);
-        this.hashMap.remove(id);
+        final DocumentEntity entity = this.findEntityById(id);
+        this.documentRepository.delete(entity);
     }
 
     private DocumentEntity findEntityById(final Long id) {
-        final DocumentEntity doc = hashMap.get(id);
-        if (doc == null)
-            throw new ResourceNotFoundException("Documento", "ID", id.toString());
-        return doc;
+        return this.documentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Documento", "ID", id.toString()));
     }
 }
